Fallos arreglados seccion 1 y 2

--- a/Memoria/capitulos/01_Introduccion.tex
+++ b/Memoria/capitulos/01_Introduccion.tex
@@ -1,33 +1,35 @@
 \chapter{Introducción}
-Desde el inicio de la humanidad, la música ha sido siempre una parte muy importante de la vida de la mayoría de personas y a día de hoy, es una pieza clave
- y fundamental en nuestra sociedad y en nuestras tradiciones. Escuchamos canciones a todas horas: mientras andamos por la calle, 
- cuando cocinamos, mientras hacemos ejercicio, conduciendo en el coche... La música está presente en gran
-parte de nuestros hábitos y de nuestra cultura y es por esto que, además de ser considerada una de las
- bellas artes, mucha gente se dedica a estudiarla y a aprender sobre ella.
 
-Sin embargo, por desgracia a lo largo de la historia el aprendizaje del lenguaje musical ha sido elitista y la mayoría
-de personas con pocos recursos económicos no ha podido acceder a gran parte de este conocimiento. Antiguamente, solo
-las familias nobles y adineradas podían darse el lujo de disfrutar de las melodías clásicas. Puede parecer que no, pero incluso en la actualidad,
-aunque mucho menos, la formación musical a veces puede ser vista como un privilegio reservado para unos pocos, pues solo
-quienes pueden permitirse ir a una escuela de música o conservatorio pueden llegar a ese aprendizaje.
 
-Con la revolución digital y el surgimiento del software, la forma en la que consumimos música ha cambiado radicalmente.
-Ahora, gracias a algunas aplicaciones, podemos acceder a una gran cantidad de temas y canciones de forma gratuita y sencilla.
-El impacto ha sido tan fuerte que prácticamente no podemos imaginarnos nuestro día a día sin estas aplicaciones que nos ofrecen música en streaming.
+Durante toda la historia de la humanidad, la música ha sido siempre una parte muy importante de la vida de la mayoría de personas y, a día de hoy, es una pieza clave
+ y fundamental en nuestra sociedad y tradiciones. Escuchamos canciones a todas horas: mientras andamos por la calle, 
+ cuando cocinamos, mientras hacemos ejercicio, conduciendo en el coche, etc. La música está presente en gran
+parte de nuestros hábitos y de nuestra cultura y es por esto que, además de ser una de las siete
+ bellas artes, mucha gente se dedica a estudiarla y a aprender sobre esta.
 
-Pero, ¿qué pasa con el acceso a el aprendizaje musical? ¿Ha habido realmente un cambio en la forma en la que se estudia y/o practica música
-con la aparación de los dispositivos móviles, de internet y de las aplicaciones software? ¿Es posible aprender música de forma autodidacta y
+Sin embargo, por desgracia, a lo largo de la historia el aprendizaje del lenguaje musical ha sido elitista y la mayoría
+de personas con pocos recursos económicos no ha podido acceder a gran parte de este conocimiento, ya que antiguamente solo
+las familias nobles y adineradas podían darse el lujo de disfrutar de las melodías clásicas. Puede parecer que no pero, incluso en la actualidad,
+ la formación musical a veces puede ser vista como un privilegio reservado para unos pocos, pues solo
+quienes pueden permitirse ir a una escuela de música o conservatorio pueden adquirir esos conocimientos.
+
+Por otro lado, pese a ser un aspecto fundamental en nuestras vidas, el aprendizaje de esta disciplina es a menudo visto como algo aburrido debido a
+clases desactualizadas, poco motivadoras y enfocadas únicamente a un género musical en específico: la música clásica.
+
+\newpage
+Todo esto plantea las siguientes cuestiones, ¿es posible democratizar el aprendizaje musical? ¿Ha habido un cambio en la forma en la que se estudia y/o practica música
+con la aparación de los dispositivos móviles, de internet y de las aplicaciones software? ¿Es posible aprender música de forma autodidacta, divertida y
 gratuita?
 
 
 \section{Motivacion}
-El surgimiento de nuevas aplicaciones que ofrecen formas de aprendizaje lúdicas y divertidas en distintos ámbitos como idiomas, matemáticas, geografía, etc, 
+El surgimiento de nuevas aplicaciones que ofrecen formas de aprendizaje lúdicas y divertidas en distintos ámbitos como idiomas, matemáticas, arte, geografía, etc, 
 me ha hecho pensar en lo útiles que pueden llegar a ser estas para personas con pocos recursos que buscan una forma rápida, barata y sencilla de aprender sobre
-algún tema en específico. El acceso a la música es algo fundamental que todas las personas deberían tener al alcance y siempre lo he creído así. 
+algún tema en específico. Además, el acceso a la música es algo fundamental que todas las personas deberían tener al alcance y siempre lo he creído así. 
 
-En cuanto al aprendizaje musical, al ser relacionado con la música clásica y tradicional, suele ser visto como algo aburrido,
-por lo que muchos no se llegan a interesar por esto o suelen abandonar su formación en mitad de esta.
-Sin desprestigiar las clases de música tradicionales, el mundo está cambiando y tengo la sensación de que la docencia musical se ha quedado atrás y no se ha adaptado
+En cuanto al aprendizaje musical, al estar relacionado con la música clásica y tradicional, suele ser visto como algo aburrido,
+por lo que muchos no se llegan a interesar por esto o suelen abandonar su formación en mitad.
+Sin infravalorar las clases de música tradicionales, el mundo está cambiando y existe una sensación de que la docencia musical se ha quedado atrás y no se ha adaptado
 a las necesidades de los jóvenes ni de la sociedad actual.
 Habiendo pocas opciones que ofrezcan un aprendizaje de la música de forma divertida y lúdica, muchas personas pierden una oportunidad valiosa de llegar a un mundo muy valioso.
 
@@ -37,23 +39,19 @@ La música y la formación en esta debería ser accesible para cualquier persona
 
 Al unir el surgimiento de distintas aplicaciones software educativas que ofrecen una visión novedosa y entretenida del aprendizaje con mi experiencia en 
 el conservatorio de música, se me ocurrió la idea de desarrollar un sistema de aprendizaje musical que permita a cualquier persona, independientemente
-de su nivel original de conocimientos musicales, aprender conceptos básicos e intermedios sobre lenguaje musical asi como
+de su nivel original de conocimientos, aprender conceptos básicos e intermedios sobre lenguaje musical, asi como
 la posibilidad de instruirse para empezar a tocar instrumentos musicales con un enfoque didáctico, divertido y progresivo.
 
 Todo esto y la falta de aplicaciones similares y de calidad en el mercado respecto al conocimiento musical, han convertido en una necesidad el desarrollo de este proyecto.
 \newpage
-\section{Descripción del problema y objetivos}
+\section{Objetivos}
 Se pretende desarrollar una aplicación software que permita al usuario aprender conceptos de lenguaje musical de forma autodidacta y sencilla,
-proporcionando un enfoque que anime a las personas a involucrarse en la adquisición de conocimientos y a entender muchísimos conceptos que la envuelven, desde el lenguaje musical
+proporcionando un enfoque que anime a las personas a involucrarse en la adquisición de conocimientos y a entender la mayoría de conceptos que la envuelven, desde el lenguaje musical
 hasta la práctica de un instrumento. 
 
-También se desea un sistema que proporcione una metodología de enseñanza lúdica y divertida, 
+También se desea un sistema que proporcione una metodología de enseñanza mediante gamificación; es decir, con contenidos lúdicos y divertidos y 
 con un progreso organizado en logros y niveles que permita a los usuarios sentirse satisfechos con su progreso y motivados a seguir aprendiendo. 
 Los usuarios podrán ver su progreso mediante un sistema de cuentas de usuario que permitirá tambien la posibilidad de compartir sus logros con otros usuarios.
 
-Otro de los objetivos será incorporar distintos tipos de ejercicios y actividades que faciliten este aprendizaje, como por ejemplo la inclusión de un sistema que detecte las notas musicales
-tocadas por el usuario. 
-
-Por último, se creará una aplicación web para la gestión de los usuarios y la administración de los contenidos de la aplicación móvil, siendo una 
-herramienta más para administradores y personal encargado de la aplicación.
-
+Por último, otro de los objetivos será incorporar distintos tipos de ejercicios y actividades que faciliten este aprendizaje, como por ejemplo la inclusión de un sistema que detecte las notas musicales
+tocadas por el usuario o la incorporación de un teclado virtual simple y sencillo que permita al usuario practicar y aprender a tocarlo.
