--- a/Memoria/capitulos/02_EstadoDelArte.tex
+++ b/Memoria/capitulos/02_EstadoDelArte.tex
@@ -160,6 +160,8 @@ comparte una clasificación global con otros usuarios que también usan la aplic
 
 
 \section{Desarrollo de Software}
+En cuanto a las tecnologías y herramientas que existen para el desarrollo de aplicaciones, 
+existen numerosas opciones que se pueden utilizar. En este apartado se muestran algunas de ellas.
 
 \subsection{Flutter}
 \begin{wrapfigure}{r}{0.27\textwidth}
@@ -187,16 +189,16 @@ Framework de código abierto creado por Meta Platforms (Facebook) y destinado al
 Está basado en Javascript como lenguaje de programación y en React como herramienta para la interfaz de usuario. La diferencia con React es que, en lugar de 
 trabajar con el navegador, trabaja con las plataformas móviles al transformar los componentes en nativos en función de la plataforma en la que se esté
 ejecutando la aplicación. 
-
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.3\textwidth]{imagenes/c2/reactnative.png}
+    \caption{Logo de React Native}
+    \end{figure}
+    
 Esta tecnología permite construir aplicaciones móviles usando solamente Javascript, con el mismo diseño que utiliza
 React permitiendote realizar una interfaz de usuario completa mediante componentes. 
 
 
-\begin{figure}[H]
-\centering
-\includegraphics[width=0.3\textwidth]{imagenes/c2/reactnative.png}
-\caption{Logo de React Native}
-\end{figure}
 
 
 Podemos encontrar dos ventajas en este framework:
@@ -234,7 +236,7 @@ Dart posee las siguientes ventajas:
 \subsection{Kotlin}
 Kotlin es un lenguaje de programación construido sobre Java, desarrollado por JetBrains y lanzado en 2016.
 Es orientado a objetos y tiene tipado estático, pero también soporta la programación por procedimientos y funciones. 
-
+\newpage
 Algunas de sus ventajas son:
 \begin{itemize}
 \item \textbf{Compatibilidad con Java:} permite utilizar código Java en Kotlin y viceversa
@@ -266,7 +268,7 @@ React es una biblioteca Javascript de código abierto que se utiliza para la cre
 Es mantenida por una gran comunidad de desarrolladores de software libre y fue lanzada en 2013. 
 
 En React se trabaja con componentes, los cuales son elementos o partes de la interfaz de usuario que facilitarán la reutilización de código y la modularidad.
-
+\newpage
 Entre las ventajas de React encontramos:
 \begin{itemize}
 \item \textbf{Componentes reutilizables:} React permite crear componentes que pueden ser reutilizados en otras partes de la aplicación.
@@ -311,7 +313,7 @@ Hay una gran cantidad de beneficios al utilizar una de estas pilas para desarrol
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.8\textwidth]{imagenes/c2/MERN.png}
+    \includegraphics[width=0.7\textwidth]{imagenes/c2/MERN.png}
     \caption{Pilas MEAN y MERN}
 \end{figure}
 
@@ -320,11 +322,12 @@ MariaDB es un sistema de gestión de bases de datos relacional de código abiert
 consecuencia de la compra de MySQL por parte de Sun Microsystems.
 Sigue un modelo relacional, lo cual significa que el contenido de los datos se almacena en tablas con un esquema más rígido que en MongoDB u otra base de datos noSQL.
 
-Pese a haber mencionado solamente MariaDB como ejemplo de sistema de gestión de bases de datos relacional, existen muchos otros como por ejemplo PostgreSQL, MySQL, etc.
-
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.4\textwidth]{imagenes/c2/mariadb.png}
+    \includegraphics[width=0.3\textwidth]{imagenes/c2/mariadb.png}
     \caption{Logo de MariaDB}
 \end{figure}
+
+Pese a haber mencionado solamente MariaDB como ejemplo de sistema de gestión de bases de datos relacional, existen muchos otros como por ejemplo PostgreSQL, MySQL, etc.
+
