--- a/Memoria/capitulos/03_Requisitos.tex
+++ b/Memoria/capitulos/03_Requisitos.tex
@@ -1,1 +1,48 @@
 \chapter{Especificación de requisitos}
+
+
+\section{Introducción}
+A continuación, vamos a describir y detallar los requisitos del sistema 
+que vamos a desarrollar. En esta sección se describirá qué vamos a construir y cómo lo vamos
+a hacer, con sus restricciones específicas.
+
+\subsection{Propósito}
+En este capítulo se pretende describir de forma clara y precisa las funciones, carasterísticas y restricciones 
+del sistema que se va a desarrollar. Estas definiciones servirán al equipo de desarrolo para 
+conocer las necesidades del sistema y a los usuarios finales. 
+
+Además, este documento servirá como base para el desarrollo de las funcionalidades descritas y como medio de comunicación 
+entre las partes involucradas en el proyecto.
+\subsection{Ámbito del Sistema}
+El sistema que vamos a desarrollar es una aplicación multiplataforma que permitirá a los usuarios
+aprender conceptos musicales de una forma amena y divertida.
+
+\subsection{Definiciones, Acrónimos y Abreviaturas}
+
+\begin{itemize}
+    \item \textbf{Requisito:} Es una condición o característica que debe cumplir el sistema para satisfacer una necesidad o cumplir una función.
+    \item \textbf{Funcionalidad:} Descripción de lo que debe hacer el producto software.
+    \item \textbf{Restricción:} Condición que limita la funcionalidad del sistema.
+    \item \textbf{Interfaces externas:} 
+    \item \textbf{Rendimiento: }
+    \item \textbf{Usuarios/Cliente: }
+    \item \textbf{}
+\end{itemize}
+
+\subsection{Referencias}
+\subsection{Visión General del Documento}
+
+
+\section{Descripción General}
+\subsection{Perspectiva del producto}
+\subsection{Funciones del producto}
+\subsection{Características de los usuarios}
+\subsection{Restricciones}
+\subsection{Suposiciones y dependencias}
+
+
+\section{Requisitos Específicos}
+\subsection{Requisitos funcionales}
+\subsection{Requisitos no funcionales}
+\subsection{Requisitos de información}
+\subsection{Bocetos de interfaz de usuario}
